--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
   <head>
+    <title>CDI agora</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>CDI agora</title>
+    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
     <link rel="stylesheet" href="https://cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
