--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     <div class="full-frame">
       <div id="main-panel" class="main-panel faded">
         <span>CDI agora:</span>
-        <h1 id="yearly-cdi"></h1>
+        <h1 class="blue" id="yearly-cdi"></h1>
         <span>Por mês:</span>
-        <h2 id="monthly-cdi"></h2>
+        <h2 class="blue" id="monthly-cdi"></h2>
         <p>em <span id="updated-at"></span></p>
       </div>
     </div>
