Add manifest.json and icons

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="cdi-agora.css">
     <script src="classes.js"></script>
     <script src="cdi-agora.js"></script>
+
+    <link rel="manifest" href="/manifest.json">
   </head>
   <body>
     <div class="full-frame">
