--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
-    <title>CDI agora</title>
+    <title>
+      CDI agora
+    </title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -10,7 +12,7 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
 
-    <link rel="stylesheet" href="cdi-agora.css">
+    <link rel="stylesheet" type="text/css" href="cdi-agora.css" media="all">
     <script src="classes.js"></script>
     <script src="cdi-agora.js"></script>
 
