Fix manifest.json link tag

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" type="text/css" href="css/cdi-agora.css" media="all">
     <script src="js/classes.js"></script>
     <script src="js/cdi-agora.js"></script>
-    <link rel="manifest" href="/manifest.json">
+
+    <link rel="manifest" href="manifest.json">
   </head>
   <body>
     <div class="full-frame">
