Improve SEO by adding meta tags

--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <html>
   <head>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Consulte o valor do CDI mensal e anual agora.">
+    <meta name="keywords" content="CDI mensal,renda fixa,investimentos">
+    <meta name="author" content="CDI agora">
+    <meta name="theme-color" content="#7bd1ca">
+
     <title>
       CDI agora
     </title>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 
