--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
   <body>
     <div class="full-frame">
       <div id="main-panel" class="main-panel faded">
-        <span>CDI agora:</span>
-        <h1 class="blue" id="yearly-cdi"></h1>
+        <span>Taxa DI:</span>
+        <h1 class="blue" id="yearly-cdi">-</h1>
         <span>Por mês:</span>
-        <h2 class="blue" id="monthly-cdi"></h2>
+        <h2 class="blue" id="monthly-cdi">-</h2>
+        <span>Índice DI:</span>
+        <h2 class="blue" id="index-cdi">-</h2>
         <p>em <span id="updated-at"></span></p>
       </div>
     </div>
